--- a/kuninganrunners.com/portfolio-details.html
+++ b/kuninganrunners.com/portfolio-details.html
@@ -250,3 +250,13 @@
 </body>
 
 </html>
+
+<div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding" style="position: absolute; left: 0px; top: 445.717px;">
+  <img src="assets/img/masonry-portfolio/masonry-portfolio-6.jpg" class="img-fluid" alt="">
+  <div class="portfolio-info">
+    <h4>Branding 2</h4>
+    <p>Lorem ipsum, dolor sit</p>
+    <a href="assets/img/masonry-portfolio/masonry-portfolio-6.jpg" title="Branding 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+    <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+  </div>
+</div>
